<resources>
    <string name="app_name">Lezza Project</string>
    <string name="start">Start</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="email_name">Email</string>
    <string name="forgete_details">Forgotten your login details?</string>
    <string name="help_signing_in">Get help with signing in.</string>
    <string name="havent_account">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="email">Email</string>
    <string name="full_name">Full name</string>
    <string name="conferm_password">Conferm Password</string>
    <string name="have_account">Already have an account?</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="reset_Password_text">To reset password, enter your email, press the button and check mail to follow instruction.</string>
    <string name="reset_Password">Reset Password</string>
    <string name="enter_email">Enter Your Email:</string>
    <string name="back">BACK</string>
    <string name="signout">Sign OUT</string>
    <string name="gps">GPS</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="edit">Edit</string>
    <string name="thank_you">Thank You So Much</string>
    <string name="happy">We hope you enjoy your service. We are very happy to have you chosen.</string>
    <string name="call_you">We will contact you within minutes to complete your order</string>
    <string name="cancel">Cancel</string>
    <string name="show">View My Requests</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="order">Order:</string>
    <string name="price">Price:</string>
    <string name="amount">Amount:</string>
    <string name="one">1</string>
    <string name="date">Date</string>
    <string name="date_">Date:</string>
    <string name="request">Request</string>
    <string name="salad">Salads:</string>
    <string name="meal">Meals:</string>
    <string name="drink">Dranks:</string>
    <string name="map">Map</string>
    <string name="address">Address:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="deserts">Deserts:</string>
    <string name="search_hint">Search about Restaurant</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="default_language">Default</string>
    <string name="title_activity_maps">Map</string>
    <string name="chat_resturant">Chat Now</string>
</resources>
