<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Log_inActivity"
    android:background="@drawable/signupphoto">

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="163dp"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/email_and_username_edit_text"
        android:ems="13"
        android:gravity="start"
        android:hint="@string/email_name"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLabel" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/email_and_username_edit_text"
        android:ems="13"
        android:gravity="start"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailET" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/log_in_btn"
        android:text="@string/login"
        android:textColor="@color/color_white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordET" />

    <TextView
        android:id="@+id/forgetDetailsTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="40dp"
        android:text="@string/forgete_details"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <Button
        android:id="@+id/helpSigninBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="64dp"
        android:padding="0dp"
        android:text="@string/help_signing_in"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/forgetDetailsTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/forgetDetailsTv"
        app:layout_constraintTop_toTopOf="@+id/forgetDetailsTv"
        app:layout_constraintVertical_bias="0.45" />


    <TextView
        android:id="@+id/havenotAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="3dp"
        android:text="@string/havent_account"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetDetailsTv"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signup"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:padding="0dp"
        android:text="@string/signup"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/havenotAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/havenotAccount"
        app:layout_constraintTop_toTopOf="@+id/havenotAccount"
        app:layout_constraintVertical_bias="0.50" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="20dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/emailET"
        app:layout_constraintEnd_toEndOf="@+id/emailET"
        app:layout_constraintTop_toTopOf="@+id/emailET"
        app:layout_constraintVertical_bias="0.437"
        app:srcCompat="@drawable/account_icon" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="20dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/passwordET"
        app:layout_constraintEnd_toEndOf="@+id/passwordET"
        app:layout_constraintTop_toTopOf="@+id/passwordET"
        app:layout_constraintVertical_bias="0.59000003"
        app:srcCompat="@drawable/password_icon" />

    <TextView
        android:id="@+id/LogInTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="52dp"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/havenotAccount"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

</android.support.constraint.ConstraintLayout>