<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_UpActivity"
    android:background="@drawable/signupphoto">

    <TextView
        android:id="@+id/signupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="163dp"
        android:text="@string/signup"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/email_and_username_edit_text"
        android:ems="13"
        android:gravity="start"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupLabel" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/email_and_username_edit_text"
        android:ems="13"
        android:gravity="start"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailET" />

    <EditText
        android:id="@+id/confPasswordET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/email_and_username_edit_text"
        android:ems="13"
        android:gravity="start"
        android:hint="@string/conferm_password"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordET" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/log_in_btn"
        android:text="@string/signup"
        android:textColor="@color/color_white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confPasswordET"
        />

    <TextView
        android:id="@+id/haveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/have_account"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/loginBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:padding="0dp"
        android:text="@string/login"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/haveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/haveAccount"
        app:layout_constraintTop_toTopOf="@+id/haveAccount"
        app:layout_constraintVertical_bias="0.50" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="20dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/emailET"
        app:layout_constraintEnd_toEndOf="@+id/emailET"
        app:layout_constraintTop_toTopOf="@+id/emailET"
        app:srcCompat="@drawable/email_icon" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="20dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/passwordET"
        app:layout_constraintEnd_toEndOf="@+id/passwordET"
        app:layout_constraintTop_toTopOf="@+id/passwordET"
        app:srcCompat="@drawable/password_icon" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="20dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/confPasswordET"
        app:layout_constraintEnd_toEndOf="@+id/confPasswordET"
        app:layout_constraintTop_toTopOf="@+id/confPasswordET"
        app:srcCompat="@drawable/password_icon" />


</android.support.constraint.ConstraintLayout>