<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderDetailsActivity"
    android:background="@drawable/bacgroung_img">

    <TextView
        android:id="@+id/orderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="casual"
        android:text="OrderName"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="70dp"
        android:fontFamily="casual"
        android:text="@string/address"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="casual"
        android:text="@string/price"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="casual"
        android:text="@string/amount"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView1111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="casual"
        android:text="Final Price"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/addressTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:textColor="@color/color_white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/priceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="68dp"
        android:textColor="@color/color_white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/addressTv" />

    <TextView
        android:id="@+id/amountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="44dp"
        android:textColor="@color/color_white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/priceTv" />

    <TextView
        android:id="@+id/finalPriceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="52dp"
        android:textColor="@color/color_white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView1111"
        app:layout_constraintTop_toBottomOf="@+id/amountTv" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/log_in_btn"
        android:text="Delete"
        android:textColor="@color/color_white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView1111"
        app:layout_constraintTop_toBottomOf="@+id/textView1111" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/log_in_btn"
        android:text="UPDATE"
        android:textColor="@color/color_white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/deleteBtn"
        app:layout_constraintTop_toTopOf="@+id/deleteBtn" />

</android.support.constraint.ConstraintLayout>